force-app/main/default/objects/DripCampaignTemplate__c/DripCampaignTemplate__c.object-meta.xml
<CustomObject>
    <label>Drip Campaign Template</label>
    <nameField>
        <label>Drip Campaign Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drip Campaign Templates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>