force-app/main/default/objects/DripCampaignTemplate__c/fields/CcAddress__c.field-meta.xml
<CustomField>
    <fullName>CcAddress__c</fullName>
    <description>A json array of email addresses for recipients who should receive a carbon copy of the email message.</description>
    <label>CC Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>