force-app/main/default/objects/DripCampaignTemplate__c/fields/FromAddress__c.field-meta.xml
<CustomField>
    <fullName>FromAddress__c</fullName>
    <label>From Address</label>
    <type>TextArea</type>
</CustomField>