force-app/main/default/objects/DripCampaignTemplate__c/fields/FromName__c.field-meta.xml
<CustomField>
    <fullName>FromName__c</fullName>
    <label>From Name</label>
    <type>TextArea</type>
</CustomField>