force-app/main/default/objects/DripCampaignTemplate__c/fields/IsEverGreen__c.field-meta.xml
<CustomField>
    <fullName>IsEverGreen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Ever Green</label>
    <type>Checkbox</type>
</CustomField>