force-app/main/default/objects/DripCampaignTemplate__c/fields/IsSentOnBehalf__c.field-meta.xml
<CustomField>
    <fullName>IsSentOnBehalf__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSentOnBehalf</label>
    <type>Checkbox</type>
</CustomField>