force-app/main/default/objects/DripCampaignTemplate__c/fields/StartDateFieldName__c.field-meta.xml
<CustomField>
    <fullName>StartDateFieldName__c</fullName>
    <label>Start Date Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>