force-app/main/default/objects/DripCampaignTemplate__c/fields/StartDateType__c.field-meta.xml
<CustomField>
    <fullName>StartDateType__c</fullName>
    <label>Start Date Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>StartFromDate</fullName>
            </value>
            <value>
                <fullName>StartFromContactDateField</fullName>
            </value>
            <value>
                <fullName>EmailsOnSpecificDates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>