force-app/main/default/objects/DripCampaignTemplate__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Template</label>
    <referenceTo>Template__c</referenceTo>
    <relationshipLabel>Drip Campaign Templates</relationshipLabel>
    <relationshipName>DripCampaignTemplates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>