force-app/main/default/objects/DripCampaignTemplate__c/listViews/All_Drip_Campaign_Templates.listView-meta.xml
<ListView>
    <fullName>All_Drip_Campaign_Templates</fullName>
    <columns>NAME</columns>
    <columns>FromAddress__c</columns>
    <columns>FromName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Drip Campaign Templates</label>
</ListView>