force-app/main/default/objects/DripCampaignTemplate__c/listViews/My_Drip_Campaign_Templates.listView-meta.xml
<ListView>
    <fullName>My_Drip_Campaign_Templates</fullName>
    <columns>NAME</columns>
    <columns>FromAddress__c</columns>
    <columns>FromName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Drip Campaign Templates</label>
</ListView>